--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
+    "build": "echo 'Building...'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
