--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,35 @@
 {
   "version": 2,
   "builds": [
-    { "src": "backend/server.js", "use": "@vercel/node" },
-    { "src": "vsa-frontend/package.json", "use": "@vercel/static-build", "config": { "distDir": "build" } }
+    { 
+      "src": "backend/server.js", 
+      "use": "@vercel/node",
+      "config": {
+        "includeFiles": ["backend/**"]
+      }
+    },
+    { 
+      "src": "vsa-frontend/package.json", 
+      "use": "@vercel/static-build", 
+      "config": { 
+        "distDir": "build" 
+      } 
+    }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/backend/server.js" },
-    { "src": "/(.*)", "dest": "/vsa-frontend/$1" }
+    { 
+      "src": "/api/(.*)", 
+      "dest": "/backend/server.js",
+      "headers": {
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept, Authorization",
+        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS"
+      }
+    },
+    { 
+      "src": "/(.*)", 
+      "dest": "/vsa-frontend/$1" 
+    }
   ],
   "env": {
     "NODE_ENV": "production"
