more print statements

--- a/vercel.json
+++ b/vercel.json
@@ -19,12 +19,7 @@
   "routes": [
     { 
       "src": "/api/(.*)", 
-      "dest": "/backend/server.js",
-      "headers": {
-        "Access-Control-Allow-Origin": "*",
-        "Access-Control-Allow-Headers": "Origin, X-Requested-With, Content-Type, Accept, Authorization",
-        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS"
-      }
+      "dest": "/backend/server.js"
     },
     { 
       "src": "/(.*)", 
