added missing packages

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,10 @@
   "name": "vsawebsite",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "build": "echo 'Building...'",
+    "build": "echo 'Backend build completed'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
