another log on the backend

--- a/vercel.json
+++ b/vercel.json
@@ -22,5 +22,10 @@
       "src": "/(.*)", 
       "dest": "/vsa-frontend/$1" 
     }
-  ]
+  ],
+  "functions": {
+    "backend/server.js": {
+      "maxDuration": 30
+    }
+  }
 } 
