--- a/vercel.json
+++ b/vercel.json
@@ -13,14 +13,10 @@
       } 
     }
   ],
-  "routes": [
-    { 
-      "src": "/api/(.*)", 
-      "dest": "/backend/server.js"
-    },
-    { 
-      "src": "/(.*)", 
-      "dest": "/vsa-frontend/$1" 
+  "rewrites": [
+    {
+      "source": "/api/:path*",
+      "destination": "/backend/server.js"
     }
   ]
 } 
