--- a/vercel.json
+++ b/vercel.json
@@ -1,26 +1,18 @@
 {
   "version": 2,
   "builds": [
-    { 
-      "src": "backend/server.js", 
-      "use": "@vercel/node"
-    },
-    { 
-      "src": "vsa-frontend/package.json", 
-      "use": "@vercel/static-build", 
-      "config": { 
-        "distDir": "build" 
-      } 
+    {
+      "src": "vsa-frontend/package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "build"
+      }
     }
   ],
-  "routes": [
-    { 
-      "src": "/api/(.*)", 
-      "dest": "/backend/server.js"
-    },
-    { 
-      "src": "/(.*)", 
-      "dest": "/vsa-frontend/$1" 
+  "rewrites": [
+    {
+      "source": "/api/:path*",
+      "destination": "https://vsa-website.vercel.app/api/:path*"
     }
   ]
-} 
+}
